# dagmc_geometry_slice_plotter

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_with_install.yml  python-publish.yml
dagmc_geometry_slice_plotter/: __init__.py  utils.py
examples/: dagmc.h5m  example_1_from_readme.py  example_2_from_readme.py  example_3_from_readme.py  example_4_from_readme.py  example_5_from_readme.py  example_6_from_readme.py  example_7_from_readme.py
src/dagmc_geometry_slice_plotter/: __init__.py  app.py  core.py  launch.py  utils.py
tests/: dagmc.h5m  test_coordinates.py  test_plot_axis_slice.py  test_plot_slice_of_dagmc_file.py  test_plot_slice_of_trimesh_object.py  test_version.py
