[metadata]
name = dagmc_geometry_slice_plotter
author = The Fusion Energy Development Team
author_email = mail@jshimwell.com
description = A minimal Python package for creating plots of slices through DAGMC geometry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/dagmc_geometry_slice_plotter
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/dagmc_geometry_slice_plotter
    Tracker = https://github.com/fusion-energy/dagmc_geometry_slice_plotter/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    matplotlib >= 3.4.2
    trimesh
    shapely
    scipy
    meshio
    h5py
    setuptools_scm  # not sure why this is needed, other codes using this setup.cfg don't need setuptools_scm here

[options.extras_require]
tests = 
    pytest >= 5.4.3
    pytest-cov>=2.12.1

[flake8]
per-file-ignores = __init__.py:F401
